<resources>
    <string name="app_name">Quiz App</string>
    <string name="question_text">Question</string>
    <string name="button_true_text">True</string>
    <string name="button_false_text">False</string>
    <string name="button_next_text">&gt;&gt;</string>
    <string name="button_previous_text">&lt;&lt;</string>
    <string name="restart_button_text">Restart</string>
    <string name="button_confirmation_text">Are you sure you want to see the answer?</string>
    <string name="button_show_answer_text">Show Answer</string>
    <string name="button_back_text">Back</string>
    <string name="cheat_button_text">Cheat</string>
    <string name="submit_button_text">Submit</string>
</resources>